--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyRecipe</string>
+    <string name="default_web_client_id">303674452579-a93jceerf8fvc6n5n49okol11j6c31df.apps.googleusercontent.com</string>
 </resources>
